# add_executable(lazylist_test1 tests/LazyList_test1.cc)
# target_link_libraries(lazylist_test1 pthread)
# 
# add_executable(lazylist_test2 tests/LazyList_test2.cc)
# target_link_libraries(lazylist_test2 pthread)
# 
# add_executable(stdlist_test1 tests/StdList_test1.cc)
# target_link_libraries(stdlist_test1 pthread)
# 
# add_executable(stdlist_test2 tests/StdList_test2.cc)
# target_link_libraries(stdlist_test2 pthread)
